--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,19 +1,17 @@
-name: Scrape and Notify
+name: Scrape LKPP Data
 
 on:
-  # Jalankan otomatis setiap 12 jam
-  schedule:
-    - cron: "0 */12 * * *"
-  # Bisa dijalankan manual lewat GitHub UI
-  workflow_dispatch:
+  workflow_dispatch:     # Bisa dijalankan manual dari GitHub UI
+  schedule:              # Jadwal otomatis setiap 12 jam
+    - cron: '0 */12 * * *'
 
 jobs:
-  run:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -23,8 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pandas requests
 
-    - name: Run the scraper and filter
+    - name: Jalankan scraping & filter
+      run: python Notif_Paket_Baru/scripts/run_all.py
+
+    - name: Commit perubahan data_master.csv
       run: |
-        python scripts/run_all.py
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@users.noreply.github.com'
+        git add Notif_Paket_Baru/data/data_master.csv
+        git commit -m 'Update data_master.csv [skip ci]' || echo "Tidak ada perubahan"
+        git push
