--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,33 +1,35 @@
 name: Scrape LKPP Data
 
 on:
-  schedule:
-    - cron: '0 2 * * *'
-    - cron: '30 8 * * *'
-  workflow_dispatch:
+  workflow_dispatch:     # Bisa dijalankan manual dari GitHub UI
+  schedule:              # Jadwal otomatis setiap 12 jam
+    - cron: '0 */12 * * *'
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout kode
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: pip install pandas requests
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas requests
 
-      - name: Jalankan scraping & filter
-        run: python Notif_Paket_Baru/scripts/run_all.py
+    - name: Jalankan scraping & filter
+      run: python Notif_Paket_Baru/scripts/run_all.py
 
-      - name: Commit hasil scraping
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add Notif_Paket_Baru/data/data_master.csv Notif_Paket_Baru/data/hasil_scrap.csv
-          git commit -m "Update data $(date +'%Y-%m-%d %H:%M:%S')" || echo "Tidak ada perubahan"
-          git push
+    - name: Commit perubahan data_master.csv
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@users.noreply.github.com'
+        git add Notif_Paket_Baru/data/data_master.csv
+        git commit -m 'Update data_master.csv [skip ci]' || echo "Tidak ada perubahan"
+        git push
